rust-c/target/debug/build/anyhow-83b3ed3a8829b855/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/vins/Documents/Dev/C/rust-c/target/debug/build/anyhow-83b3ed3a8829b855/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
